Email Connect added

--- a/eSya.ProductSetup.DO/eSya.ProductSetup.DO/eSya.ProductSetup.DO.csproj
+++ b/eSya.ProductSetup.DO/eSya.ProductSetup.DO/eSya.ProductSetup.DO.csproj
@@ -8,6 +8,7 @@
 
   <ItemGroup>
     <Compile Remove="DO_BusinessConfiguration.cs" />
+    <Compile Remove="DO_EmailConnectHeader.cs" />
   </ItemGroup>
 
 </Project>
