--- a/eSya.ProductSetup.DL/eSya.ProductSetup.DL/eSya.ProductSetup.DL.csproj
+++ b/eSya.ProductSetup.DL/eSya.ProductSetup.DL/eSya.ProductSetup.DL.csproj
@@ -14,6 +14,7 @@
 
   <ItemGroup>
     <Compile Remove="Localization\Class1.cs" />
+    <Compile Remove="Repository\AgeRangeRepository.cs" />
   </ItemGroup>
 
   <ItemGroup>
