--- a/eSya.ProductSetup.DO/eSya.ProductSetup.DO/eSya.ProductSetup.DO.csproj
+++ b/eSya.ProductSetup.DO/eSya.ProductSetup.DO/eSya.ProductSetup.DO.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="DO_AgeRange.cs" />
     <Compile Remove="DO_BusinessConfiguration.cs" />
     <Compile Remove="DO_EmailConnectHeader.cs" />
     <Compile Remove="DO_UserRoleActionLink.cs" />
