--- a/eSya.ProductSetup.WebAPI/eSya.ProductSetup.WebAPI/eSya.ProductSetup.WebAPI.csproj
+++ b/eSya.ProductSetup.WebAPI/eSya.ProductSetup.WebAPI/eSya.ProductSetup.WebAPI.csproj
@@ -14,6 +14,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Compile Remove="Controllers\AgeRangeController.cs" />
     <Compile Remove="Controllers\LocalizeController.cs" />
   </ItemGroup>
 
